marketplace-core/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-core
  labels:
    app: marketplace-core
spec:
  selector:
    matchLabels:
      app: marketplace-core
  template:
    metadata:
      labels:
        app: marketplace-core
    spec:
      containers:
        - name: marketplace-core
          image: marketplace-core
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9001
